[package]
name = "accountable-refcell"
version = "0.1.0"
authors = ["Josh Matthews <josh@joshmatthews.net>"]
license = "MPL-2.0"
repository = "https://github.com/jdm/accountable-refcell"
description = "A RefCell wrapper that provides actionable information for dynamic borrow failures."
documentation = "https://docs.rs/accountable-refcell"
readme = "README.md"
keywords = ["refcell"]

[dependencies]
backtrace = "0.3"